# craig-summarizer

./: .gitignore  README.md  pyproject.toml
src/: main.py  summarizer.py
